# serializer version: 1
# name: test_partner_detailview[<lambda>-partner_detailview as anonymous][partner_detailview as anonymous]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="partner-list" href="/partners/">Nos partenaires</a>
              </li>
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <div class="d-flex gap-3 align-items-center mb-2">
                          
                              <img alt="Best Partner Ever" class="img-fluid" src="[img src]" width="200"/>
                          
                          <h1 class="mb-0">Best Partner Ever</h1>
                      </div>
                      
                      <h2 class="mt-3">short description for SEO</h2>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12">
                      <article class="textarea_cms_md"><h3>h3 long MD description</h3>
  
  <p>lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></article>
                      
                          <div class="mt-3">
                              <a class="has-external-link" href="https://www.best-partner-ever.com" rel="noopener noreferrer" target="_blank">https://www.best-partner-ever.com</a>
                          </div>
                      
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: test_partner_detailview[<lambda>-partner_detailview as superuser][partner_detailview as superuser]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="partner-list" href="/partners/">Nos partenaires</a>
              </li>
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <div class="d-flex gap-3 align-items-center mb-2">
                          
                              <img alt="Best Partner Ever" class="img-fluid" src="[img src]" width="200"/>
                          
                          <h1 class="mb-0">Best Partner Ever</h1>
                      </div>
                      
                          <a href="/admin/partner/partner/[PK of Partner]/change/"><small>Mettre à jour</small></a>
                      
                      <h2 class="mt-3">short description for SEO</h2>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12">
                      <article class="textarea_cms_md"><h3>h3 long MD description</h3>
  
  <p>lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></article>
                      
                          <div class="mt-3">
                              <a class="has-external-link" href="https://www.best-partner-ever.com" rel="noopener noreferrer" target="_blank">https://www.best-partner-ever.com</a>
                          </div>
                      
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: test_partner_detailview[<lambda>-partner_detailview][partner_detailview]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="partner-list" href="/partners/">Nos partenaires</a>
              </li>
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-12">
                      <div class="d-flex gap-3 align-items-center mb-2">
                          
                              <img alt="Best Partner Ever" class="img-fluid" src="[img src]" width="200"/>
                          
                          <h1 class="mb-0">Best Partner Ever</h1>
                      </div>
                      
                      <h2 class="mt-3">short description for SEO</h2>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12">
                      <article class="textarea_cms_md"><h3>h3 long MD description</h3>
  
  <p>lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></article>
                      
                          <div class="mt-3">
                              <a class="has-external-link" href="https://www.best-partner-ever.com" rel="noopener noreferrer" target="_blank">https://www.best-partner-ever.com</a>
                          </div>
                      
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
